# Dilu

./: .gitignore  README.md
adaptive_2D_scaling/: README.md
adaptive_2D_scaling/horizontal_scaling/: utils_docker.py
adaptive_2D_scaling/vertical_scaling/client/: CMakeLists.txt  build.sh  clear_and_build.sh
adaptive_2D_scaling/vertical_scaling/client/client-lib/: ld.so.preload  libcuda.so.1  libnvidia-ml.so.1
adaptive_2D_scaling/vertical_scaling/client/include/: cuda-helper.h  hijack.h
adaptive_2D_scaling/vertical_scaling/client/src/: container_client_hijack_call.c  cuda_originals.c  loader.c  nvml_entry.c
adaptive_2D_scaling/vertical_scaling/server/: RCKM  RCKM.c  README.md
evaluation/models/: model_list.txt
evaluation/scripts/: README.md  cv_models.py  dp_bert.py  dp_gpt2_large.py  run_BERT_INF_batch.py  run_Resnet152_INF_batch.py  run_Roberta_INF_batch.py
evaluation/scripts/workload_generator/: req_generator_gpt.py  req_generator_gpt_bursty.py  req_generator_image_bursty.py  req_generator_nlp_bursty.py  req_generator_nlp_gamma.py  (+1 more)
profiling/: README.md
profiling/training/: binary-search-based-searching.sh
scheduling/: README.md  scaler.py  scheduler.py  utils_docker.py
scheduling/data/: calculate_threshold.py
scheduling/scripts_deploy/: deploy_inference_funcs.py  deploy_train_funcs.py  start_inf_workloads.sh  submiter_reqs_gpt.py  submiter_reqs_nlp.py
scheduling/scripts_tasks/: dp_gpt2_large_lm.py  dp_roberta.py  run_GPT2_INF_batch.py  run_LLaMA2_INF.py  run_VGG19_INF_batch.py
scheduling/simulations/: comp_baselines.py
(+29 files in other folders)
